@@ -13,6 +13,7 @@
 10. Only perform IP detection if running under Android - to fix MS Edge issue.
 11. If showing track numbers, add small circle between number and title.
 12. Fix showing albums under Genres when filtered by Composer or Conductor.
+13. Show composer in queue and now playing for Classical and Jazz tracks.
 
 0.6.0
 -----
